# PathoAI

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  build.sh  docker-compose.monitoring.yml  packages.txt  prometheus-alerts.yml  prometheus.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
config/: __init__.py  settings.py
core/: __init__.py  config.py  defaults.py  exceptions.py  image_processing.py  inference.py  model_factory.py  performance_metrics.py  report_generator.py
core/analysis/: __init__.py  postprocessing.py  preprocessing.py
core/inference/: __init__.py  classifier.py  engine.py  segmenter.py
core/memory/: __init__.py  config.py  gc_manager.py  monitor.py  session_manager.py
core/models/: __init__.py  manager.py
docs/: architecture.md  contributing.md  dependencies.md  index.md  license.md  quickstart.md
docs/api/: README.md
docs/api/core/: analysis.md  inference.md  memory.md
models/: cia_net_final_sota.keras  efficientnetv2s_classification.keras  resnet50_best.keras
notebook/: LC25000_EfficientNetV2_S_3_class.ipynb  MoNuSeg_CIA_NET.ipynb
outputs/: __init__.py  report_generator.py
requirements/: base.in  base.txt  development.in  development.txt  production.in
ui/: __init__.py  dashboard.py
utils/: __init__.py  audit_logger.py  metrics.py
